--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/NastyaSavchenko/goit-js-hw-08.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "NastyaSavchenko <savyle4ka13@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/NastyaSavchenko/goit-js-hw-08/issues"
@@ -28,4 +28,3 @@
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
-
